# esp32-smartlight

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  LICENSE  README.md  SALES_TERMS.md  docker-compose.yml  docker_build.bat  docker_build.ps1  docker_build.sh  docker_flash.bat  docker_flash.ps1  docker_flash.sh  partitions_custom.csv  sdkconfig  sdkconfig.defaults
.github/: copilot-instructions.md
.github/instructions/: agent-customization.instructions.md  c-h-best-practices.instructions.md  documentation.instructions.md  esp-idf-best-practices.instructions.md  esp-idf-version.instructions.md  security.instructions.md
.github/prompts/: best-practices.prompt.md  check-best-practices.prompt.md  update-packages.prompt.md
.github/workflows/: build.yml  test.yml
build_scripts/: README_BUILD.md  build.bat  build.ps1  build.sh  flash.bat  flash.ps1  flash.sh
components/ble/: CMakeLists.txt  ble_manager.c  ble_manager.h  idf_component.yml
components/common/: common_defs.h
components/gpio/: CMakeLists.txt  gpio_control.c  gpio_control.h
components/http/: CMakeLists.txt  README_HTTP.md  http_server.c  http_server.h
components/ota/: CMakeLists.txt  idf_component.yml  ota_manager.c  ota_manager.h
components/storage/: CMakeLists.txt  nvs_manager.c  nvs_manager.h
components/system_info/: CMakeLists.txt  device_info.c  device_info.h  idf_component.yml
components/wifi/: CMakeLists.txt  idf_component.yml  wifi_manager.c  wifi_manager.h
docs/: CICD.md  DOCKER.md  OTA.md  TESTING.md  WRITING_DOCS.md
licenses/: COPYRIGHT  EXPORT_NOTICE.md  LICENSE  REFUND_POLICY.md  SUPPORT_POLICY.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/ble/: README_BLE.md  ble_manager.c  ble_manager.h
main/common/: common_defs.h  credentials.h
main/device/: device_info.c  device_info.h
main/gpio/: gpio_control.c  gpio_control.h
main/http/: http_server.c  http_server.h
main/ota/: README_OTA.md  ota_manager.c  ota_manager.h
main/storage/: nvs_manager.c  nvs_manager.h
main/wifi/: wifi_manager.c  wifi_manager.h
test/: CMakeLists.txt
test/system/test_main/: test_main.c
test/test_main/: CMakeLists.txt  test_device_info.c  test_gpio_control.c  test_main.c  test_nvs_manager.c  test_wifi_manager.c
test/unit/test_main/: CMakeLists.txt  test_wifi_manager.c
test_system/: CMakeLists.txt
test_system/test_main/: test_main.c  test_system.c
tests/: README.md  REFACTORING_SUMMARY.md  conftest.py  pytest.ini  run_tests.sh
tests/integration/: CMakeLists.txt  README.md  sdkconfig
tests/integration/test_main/: CMakeLists.txt  test_device_nvs_integration.c  test_main.c  test_wifi_nvs_integration.c
tests/on_target/: README.md  sdkconfig
tests/on_target/test_main/: CMakeLists.txt  test_device_info.c  test_gpio_control.c  test_main.c  test_nvs_manager.c  test_wifi_manager.c
tests/system/: CMakeLists.txt  sdkconfig
tests/system/main/: idf_component.yml
tests/system/test_main/: CMakeLists.txt  test_main.c
tests/unit/: CMakeLists.txt  README.md  idf_component.yml  sdkconfig
tests/unit/main/: idf_component.yml
tests/unit/test_main/: CMakeLists.txt  test_common_defs.c  test_credential_validation.c  test_device_info.c  test_main.c
